--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -20,11 +21,12 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m playwright install --with-deps
 
-      - name: Run Tests
-        run: pytest tests/ --maxfail=1 --disable-warnings --tb=short
+      - name: Run Pytest Tests
+        run: |
+          pytest tests/ --maxfail=1 --disable-warnings --tb=short
