Fix requirements.txt syntax

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-pytest
-pytest-html
-pytest-asyncio
 playwright
-python-dotenvpip install -r requirements.txt
+pytest
+pytest-asyncio
+python-dotenv
